Compatibility check with rtMedia and Wbcom Designs addons

--- a/assets/css/platform.css
+++ b/assets/css/platform.css
@@ -90,7 +90,11 @@ img.emojioneemoji {
 }
 
 #whats-new-attachments.empty {
-    display: none;
+    padding: 0;
+}
+
+#whats-new-attachments.empty .activity-attached-gif-container {
+    margin: 0;
 }
 
 .buddypress .entry-content #whats-new-textarea ul,
