--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -34,6 +34,7 @@
     # BuddyPress Group Email Subscription
     # BuddyPress Lock Unlock Activity
     # BuddyMessageUX-Free
+    # BuddyPress Moderation
 
 --------------------------------------------------------------*/
 
@@ -168,7 +169,9 @@ button#mpp-edit-media-submit,
 #bplock-login-btn,
 #bplock-register-btn,
 .bgr-submit-review,
-#bupr_save_review {
+#bupr_save_review,
+button.friendship-button,
+button.group-button {
     font-family: inherit;
     font-size: initial;
     color: #fff;
@@ -224,7 +227,9 @@ button#mpp-edit-media-submit:hover,
 #bplock-login-btn:hover,
 #bplock-register-btn:hover,
 .bgr-submit-review:hover,
-#bupr_save_review:hover {
+#bupr_save_review:hover,
+button.friendship-button:hover,
+button.group-button:hover {
     background-color: var(--button_background_hover_color);
     border: 1px solid var(--button_border_hover_color);
     color: #fff;
@@ -506,10 +511,32 @@ body .buddypress-wrap form.bp-messages-search-form input[type="search"],
     height: 0;
 }
 
+.buddypress-wrap .field_type_multiselectbox select[multiple] {
+    overflow: auto;
+    background-image: none;
+    min-height: 85px;
+    width: 100%;
+    border-radius: 0;
+}
+
+.buddypress-wrap .field_type_multiselectbox select[multiple] option {
+    padding: 2px 5px;
+}
+
 
 /*--------------------------------------------------------------
 # rtMedia Specific
 --------------------------------------------------------------*/
+
+.bp-nouveau .activity-update-form.activity-update-form #aw-whats-new-reset {
+    margin-top: 0;
+}
+
+.bp-nouveau #aw-whats-new-reset,
+.bp-nouveau #aw-whats-new-reset:hover {
+    background: transparent;
+    border: 0;
+}
 
 .activity-list .activity-item .activity-content .rtm-activity-media-list {
     line-height: 0;
@@ -2173,6 +2200,10 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul div
         border-right: 0;
         padding: .5em calc(.5em + 2px);
     }
+    #object-nav:not(.vertical)>ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 @media screen and (max-width: 46.8em) {
@@ -3368,11 +3399,11 @@ table.badgeos-rank-table tfoot tr th {
 --------------------------------------------------------------*/
 
 .bpchk-marker-container {
-    margin: 15px 0;
+    margin-top: 10px;
 }
 
-.bpchk-marker-container {
-    margin-right: 10px;
+#whats-new-toolbar .bpchk-marker-container {
+    margin-top: 0;
 }
 
 .bp-checkins.bp-checkin-panel {
@@ -3385,8 +3416,18 @@ table.badgeos-rank-table tfoot tr th {
 ## BuddyPress Quotes
 --------------------------------------------------------------*/
 
+@media screen and (min-width: 46.8em) {
+    #whats-new-options .post-elements-buttons-item:first-child {
+        margin-left: 0 !important;
+    }
+}
+
 .quote-btn {
-    margin: 15px 0;
+    margin-top: 10px;
+}
+
+#whats-new-toolbar .quote-btn {
+    margin-top: 0;
 }
 
 .bp-nouveau .site-wrapper .bpquotes-bg-selection-div {
@@ -3399,11 +3440,11 @@ table.badgeos-rank-table tfoot tr th {
 --------------------------------------------------------------*/
 
 .bp-nouveau .site-wrapper .bpolls-html-container {
-    margin: 15px 0;
+    margin-top: 10px;
 }
 
-.wb-quote.bp-nouveau .site-wrapper .bpolls-html-container {
-    margin-left: 10px;
+.bp-nouveau .site-wrapper #whats-new-toolbar .bpolls-html-container {
+    margin-top: 0;
 }
 
 
@@ -3646,8 +3687,12 @@ body.search-results.buddypress-global-search .bp-list li .action {
 
 .bp-giphy-html-container,
 .activity-giphy-container {
-    margin-left: 0;
-    margin-right: 10px;
+    margin-top: 10px;
+}
+
+#whats-new-toolbar .bp-giphy-html-container,
+#whats-new-toolbar .activity-giphy-container {
+    margin-top: 10px;
 }
 
 .buddypress-giphy-active form.ac-form .ac-reply-content .bp-giphy-html-container {
@@ -4114,5 +4159,20 @@ input.bpfb_remote_image {
     }
     .thickbox-loading #TB_ajaxContent {
         width: 100% !important;
+    }
+}
+
+
+/*--------------------------------------------------------------
+# BuddyPress Moderation
+--------------------------------------------------------------*/
+
+body.bmpro_moderation_content .member-home aside {
+    display: none;
+}
+
+@media screen and (min-width: 60em) {
+    body.bmpro_moderation_content.has-single-member-sidebar .member-home {
+        grid-template-columns: 1fr;
     }
 }
