--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -1,6 +1,7 @@
 /*--------------------------------------------------------------
 # Imports
 --------------------------------------------------------------*/
+
 @import "_custom-properties.css";
 @import "_reset.css";
 @import "_typography.css";
@@ -11,12 +12,13 @@
 /*--------------------------------------------------------------
 # Basic
 --------------------------------------------------------------*/
+
 body,
 html {
     direction: rtl;
 }
 
-body:not(.block-editor-page):not(.wp-core-ui), 
+body:not(.block-editor-page):not(.wp-core-ui),
 body:not(.block-editor-page):not(.wp-core-ui) pre {
     unicode-bidi: embed;
     text-align: right !important;
@@ -36,14 +38,14 @@ body:not(.block-editor-page):not(.wp-core-ui) pre {
     margin-right: 1.5rem;
 }
 
-.entry-content>.wp-block-quote, 
+.entry-content>.wp-block-quote,
 .entry-content>.wp-block-quote.is-style-large {
     margin-left: 0;
     margin-right: 1.5rem;
 }
 
 @media screen and (min-width: 48em) {
-    .entry-content>.wp-block-quote, 
+    .entry-content>.wp-block-quote,
     .entry-content>.wp-block-quote.is-style-large {
         margin-left: 0;
         margin-right: auto;
@@ -72,7 +74,7 @@ body:not(.block-editor-page):not(.wp-core-ui) pre {
 }
 
 .menu-icons-wrapper .cart,
- .menu-icons-wrapper .search {
+.menu-icons-wrapper .search {
     float: right;
 }
 
@@ -81,14 +83,14 @@ body:not(.block-editor-page):not(.wp-core-ui) pre {
     margin-right: 10px;
 }
 
-.buddypress-icons-wrapper .bp-msg sup, 
+.buddypress-icons-wrapper .bp-msg sup,
 .buddypress-icons-wrapper .user-notifications sup,
 .menu-icons-wrapper .cart sup {
     right: -9px;
     left: auto;
 }
 
-#user-profile-menu, 
+#user-profile-menu,
 .bp-header-submenu {
     left: 0;
     right: auto;
@@ -104,32 +106,46 @@ body:not(.block-editor-page):not(.wp-core-ui) pre {
     right: auto;
 }
 
-body .main-navigation a, 
-body .main-navigation ul li a, 
-body .nav--toggle-sub li.menu-item-has-children, 
+body .main-navigation a,
+body .main-navigation ul li a,
+body .nav--toggle-sub li.menu-item-has-children,
 body .nav--toggle-small .menu-toggle,
-body .site-sub-header .entry-header .entry-title, 
-body .site-sub-header .page-header .page-title, 
-body .site-sub-header .entry-header, 
-body .site-sub-header .page-header, 
-body .site-sub-header .entry-title, 
+body .site-sub-header .entry-header .entry-title,
+body .site-sub-header .page-header .page-title,
+body .site-sub-header .entry-header,
+body .site-sub-header .page-header,
+body .site-sub-header .entry-title,
 body .site-sub-header .page-title {
     text-align: right;
 }
 
-.buddypress-wrap #notification-select, 
-.buddypress-wrap .select-wrap select, 
-.buddypress-wrap .standard-form select, 
+.buddypress-wrap #notification-select,
+.buddypress-wrap .select-wrap select,
+.buddypress-wrap .standard-form select,
 body #buddypress.buddypress-wrap form#whats-new-form #whats-new-options select,
-body .buddypress-wrap .subnav-filters .component-filters select, 
-body .buddypress-wrap .subnav-filters .last select
-select,
+body .buddypress-wrap .subnav-filters .component-filters select,
+body .buddypress-wrap .subnav-filters .last select select,
 select.orderby,
 select#pa_color,
 select#pa_size {
     background-position: left 1rem center !important;
     padding-left: 40px !important;
     padding-right: 12px !important;
+}
+
+.site-sub-header {
+    margin-left: auto;
+    margin-right: -50vw;
+    left: auto;
+    right: 50%;
+}
+
+.site-sub-header .entry-header-title,
+.site-sub-header .entry-title,
+.site-sub-header .page-header,
+.site-sub-header .page-title {
+    margin-right: 0;
+    margin-left: auto;
 }
 
 .menu-icons-wrapper {
@@ -152,11 +168,11 @@ select#pa_size {
 }
 
 @media (min-width: 768px) {
-    .nav--toggle-sub li.menu-item--has-toggle, .nav--toggle-sub li.menu-item-has-children {
+    .nav--toggle-sub li.menu-item--has-toggle,
+    .nav--toggle-sub li.menu-item-has-children {
         padding-left: .7em;
         padding-right: 0;
     }
-
     #primary-menu .submenu-btn {
         left: 0;
         right: auto;
@@ -170,9 +186,11 @@ select#pa_size {
     }
 }
 
+
 /*--------------------------------------------------------------
 # BuddyPress
 --------------------------------------------------------------*/
+
 .buddypress-wrap .bp-messages,
 .buddypress-wrap .bp-feedback {
     padding: 0.615em 0.7em 0.615em 2.25em;
@@ -184,18 +202,15 @@ select#pa_size {
         margin-left: 15px;
         margin-right: 0;
     }
-
     .bp-list:not(.grid) li .item .item-block {
         float: right;
         margin-left: 0;
     }
-
-    .bp-list li .action div.generic-button:last-child, 
+    .bp-list li .action div.generic-button:last-child,
     .bp-list li .action li.generic-button:last-child {
         margin-left: 0;
         margin-right: 10px;
     }
-
     .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a {
         border-left: 0;
     }
@@ -212,7 +227,7 @@ select#pa_size {
 }
 
 #buddypress input#aw-whats-new-submit,
- form.ac-form .ac-reply-content input {
+form.ac-form .ac-reply-content input {
     margin-right: 10px;
     margin-left: 0;
 }
@@ -239,15 +254,15 @@ select#pa_size {
     margin-right: 152px;
 }
 
-.single-headers li.generic-button, 
-body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul div, 
+.single-headers li.generic-button,
+body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul div,
 body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li {
     margin: 10px 0 0 10px;
 }
 
 @media screen and (max-width: 782px) {
-    #buddypress div#item-header #item-header-cover-image #item-header-content, 
-    body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-actions, 
+    #buddypress div#item-header #item-header-cover-image #item-header-content,
+    body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-actions,
     body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-header-content {
         margin-right: 0;
         padding: 0;
@@ -264,7 +279,7 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li 
     margin-left: 0;
 }
 
-.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li, 
+.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li,
 .bp-nouveau.media #buddypress div#item-header div#item-header-content ul div {
     float: right;
 }
@@ -279,11 +294,10 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li 
         margin-right: auto;
         margin-left: 0;
     }
-
     body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-header-content {
         float: right;
         margin-right: 0;
-    }    
+    }
 }
 
 .buddypress .bp-invites-content ul.item-list li .action {
@@ -293,7 +307,8 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li 
 
 #buddypress .bp-invites-content li .item-avatar {
     margin-left: 15px;
-    margin-right: 0;;
+    margin-right: 0;
+    ;
 }
 
 #item-body #group-invites-container .bp-invites-content .list-title,
@@ -307,9 +322,11 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul li 
     transform: rotate(180deg);
 }
 
+
 /*--------------------------------------------------------------
 # WooCommerce
 --------------------------------------------------------------*/
+
 a.page-numbers[title="←"],
 a.page-numbers[title="→"],
 a.next.page-numbers,
@@ -334,27 +351,27 @@ a.prev.page-numbers {
     right: auto;
 }
 
-.woocommerce #respond input#submit.added::after, 
-.woocommerce a.button.added::after, 
-.woocommerce button.button.added::after, 
+.woocommerce #respond input#submit.added::after,
+.woocommerce a.button.added::after,
+.woocommerce button.button.added::after,
 .woocommerce input.button.added::after {
     margin-left: .53em;
     margin-right: 0;
 }
 
-.woocommerce-page div.product form.cart div.quantity, 
+.woocommerce-page div.product form.cart div.quantity,
 .woocommerce div.product form.cart div.quantity {
     margin: 0 0 0 15px;
 }
 
-.woocommerce-error, 
-.woocommerce-info, 
-.woocommerce-message, 
-.woocommerce-page .entry-content .woocommerce-error, 
-.woocommerce-page .entry-content .woocommerce-info, 
-.woocommerce-page .entry-content .woocommerce-message, 
-.woocommerce .entry-content .woocommerce-error, 
-.woocommerce .entry-content .woocommerce-info, 
+.woocommerce-error,
+.woocommerce-info,
+.woocommerce-message,
+.woocommerce-page .entry-content .woocommerce-error,
+.woocommerce-page .entry-content .woocommerce-info,
+.woocommerce-page .entry-content .woocommerce-message,
+.woocommerce .entry-content .woocommerce-error,
+.woocommerce .entry-content .woocommerce-info,
 .woocommerce .entry-content .woocommerce-message {
     padding: 1em 3.5em 1em 2em;
 }
@@ -365,5 +382,5 @@ a.prev.page-numbers {
 
 .woocommerce-account .woocommerce-MyAccount-navigation li.woocommerce-MyAccount-navigation-link a:after {
     right: 10px;
-    left: auto;    
+    left: auto;
 }
