--- a/assets/css/dokan.css
+++ b/assets/css/dokan.css
@@ -142,6 +142,12 @@ button.mfp-arrow {
     }
 }
 
+.dokan-dashboard-content table.woocommerce-importer-options,
+.dokan-dashboard-content table.woocommerce-importer-options th,
+.dokan-dashboard-content table.woocommerce-importer-options td {
+    border: 0;
+}
+
 
 /* Select2 Style */
 
