--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -4,6 +4,7 @@
 # Global Buddypress CSS
 # rtMedia Specific
 # Activity Directory
+    # BuddyPress Activity
 # Members Directory
 # Groups Directory
 # Member Single
@@ -173,7 +174,11 @@ button#mpp-edit-media-submit,
 .bgr-submit-review,
 #bupr_save_review,
 button.friendship-button,
-button.group-button {
+button.group-button,
+.avatar-history-actions button.avatar-history-action.recycle,
+.avatar-history-actions button.avatar-history-action.delete,
+.avatar-history-actions button.recycle.disabled,
+.avatar-history-actions button.delete.disabled {
     font-family: inherit;
     font-size: initial;
     color: #fff;
@@ -231,7 +236,11 @@ button#mpp-edit-media-submit:hover,
 .bgr-submit-review:hover,
 #bupr_save_review:hover,
 button.friendship-button:hover,
-button.group-button:hover {
+button.group-button:hover,
+.avatar-history-actions button.avatar-history-action.recycle:hover,
+.avatar-history-actions button.avatar-history-action.delete:hover,
+.avatar-history-actions button.recycle.disabled:hover,
+.avatar-history-actions button.delete.disabled:hover {
     background-color: var(--button_background_hover_color);
     border: 1px solid var(--button_border_hover_color);
     color: #fff;
@@ -1521,6 +1530,51 @@ input#rt_media_comment_submit {
 
 
 /*--------------------------------------------------------------
+## BuddyPress Activity
+--------------------------------------------------------------*/
+
+.bp-member-activity-preview,
+.bp-group-activity-preview {
+    padding: 15px;
+}
+
+.bp-member-avatar-content img.profile-photo,
+.bp-member-avatar-content img.group-photo,
+.bp-group-avatar-content img.profile-photo,
+.bp-group-avatar-content img.group-photo {
+    border: solid 2px #fff;
+    background: rgba(255, 255, 255, 0.8);
+    height: 80px;
+    width: 80px;
+    margin: 0 auto 10px;
+}
+
+.activity-list .activity-item .activity-content .bp-member-short-description-title,
+.activity-list .activity-item .activity-content .bp-group-short-description-title,
+.activity-list .activity-item .activity-content .bp-member-nickname {
+    margin-bottom: 0 !important;
+}
+
+@media screen and (min-width: 46.8em) {
+    .bp-profile-button {
+        text-align: center;
+        margin-top: 15px;
+    }
+    .bp-member-preview-cover+.bp-member-short-description .bp-profile-button,
+    .bp-group-preview-cover+.bp-group-short-description .bp-profile-button {
+        position: absolute;
+        right: 0;
+        top: 93px;
+    }
+    [dir='rtl'] .bp-member-preview-cover+.bp-member-short-description .bp-profile-button,
+    [dir='rtl'] .bp-group-preview-cover+.bp-group-short-description .bp-profile-button {
+        right: auto;
+        left: 0;
+    }
+}
+
+
+/*--------------------------------------------------------------
 # Members Directory
 --------------------------------------------------------------*/
 
@@ -2008,6 +2062,27 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul div
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+}
+
+
+/* avatars-history */
+
+.avatars-history {
+    flex-direction: column;
+}
+
+.avatar-history-list {
+    width: 100%;
+}
+
+.avatar-history-actions {
+    margin-left: 0;
+    text-align: left;
+}
+
+.avatar-history-actions button.recycle.disabled,
+.avatar-history-actions button.delete.disabled {
+    cursor: not-allowed;
 }
 
 
