--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -382,6 +382,32 @@ p:empty::before {
         grid-column: 1 !important;
         min-width: 0;
     }
+    /* Docs Component */
+    .has-sidebar-left.bp-docs .site-wrapper,
+    .has-sidebar-right.bp-docs .site-wrapper,
+    .has-sidebar-both.bp-docs .site-wrapper {
+        display: block !important;
+    }
+    .has-sidebar-left.has-docs-sidebar-right .site-wrapper,
+    .has-sidebar-right.has-docs-sidebar-right .site-wrapper,
+    .has-sidebar-both.has-docs-sidebar-right .site-wrapper {
+        display: grid !important;
+        grid-template-columns: 3fr 260px !important;
+        grid-gap: 2rem;
+        justify-content: center;
+    }
+    .has-sidebar-left.has-docs-sidebar-right .site-main,
+    .has-sidebar-right.has-docs-sidebar-right .site-main,
+    .has-sidebar-both.has-docs-sidebar-right .site-main {
+        grid-column: 1 !important;
+        min-width: 0;
+    }
+    .has-sidebar-left.has-docs-sidebar-right .primary-sidebar,
+    .has-sidebar-right.has-docs-sidebar-right .primary-sidebar,
+    .has-sidebar-both.has-docs-sidebar-right .primary-sidebar {
+        grid-column: 2 !important;
+        min-width: 0;
+    }
 }
 
 @media screen and (max-width: 60em) {
